CHANGES
=======

1.1 (unreleased)
----------------

- Nothing changed yet.


1.0 (2011-08-25)
----------------

- Add support for linting JS files contained in zipped eggs (#9453).
- Add an entry point for running jslint from the command line (#9449).
- Skip tests if node.js is not available. Skipping tests only works properly in
  Python >= 2.7, though. (#9458)


0.2 (2011-08-24)
----------------

- Implement custom error ignores (#9456).


0.1 (2011-08-10)
----------------

- first release.